Fixed Logo proportions and fixed header positioning
Logo was a bit distorted, and header links were off center.

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 .esportsLogo{
-    width: 245px;
-    height: 109px;
+    width: 320px;
+    height: 106.75px;
 }
 
 .homeImg{
